legibility and mobile fixes!

--- a/style.css
+++ b/style.css
@@ -70,8 +70,12 @@ a {
   padding:2px;
 }
 .tile {
-  margin: 20px;
+  margin: 15px;
+  padding:5px;
   width: 40vw;
+  background-color: rgba(0,0,0,.4);
+  border-radius:25px;
+  box-shadow: 0px 0px 100px 50px rgba(0,0,0,0.33);
 }
 .aboutparagraph {
   margin: 0 20px 0 20px;
@@ -87,6 +91,7 @@ a {
   .backgroundimage {
     background-attachment: unset;
     min-height: 93vh;
+    padding: 0px 0 30px 0;
   }
   .tile {
     width: 100%;
